Compilers_Principles/experiment12/python_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment
Rule 5     statement -> expr
Rule 6     statement -> print
Rule 7     statement -> if
Rule 8     statement -> while
Rule 9     statement -> for
Rule 10    statement -> break
Rule 11    statement -> function
Rule 12    statement -> return
Rule 13    assignment -> variable ASSIGN expr
Rule 14    assignment -> variable MINEQUAL expr
Rule 15    assignment -> variable PLUSEQUAL expr
Rule 16    assignment -> variable DPLUS
Rule 17    assignment -> variable DMINUS
Rule 18    variable -> variable LBRACKET expr RBRACKET
Rule 19    variable -> ID
Rule 20    expr -> expr PLUS term
Rule 21    expr -> expr MINUS term
Rule 22    expr -> term
Rule 23    expr -> array
Rule 24    term -> term TIMES factor
Rule 25    term -> term DIVIDE factor
Rule 26    term -> term EDIVIDE factor
Rule 27    term -> factor
Rule 28    factor -> variable
Rule 29    factor -> NUMBER
Rule 30    factor -> len
Rule 31    factor -> call
Rule 32    factor -> LPAREN expr RPAREN
Rule 33    exprs -> exprs COMMA expr
Rule 34    exprs -> expr
Rule 35    len -> LEN LPAREN variable RPAREN
Rule 36    print -> PRINT LPAREN exprs RPAREN
Rule 37    print -> PRINT LPAREN RPAREN
Rule 38    array -> LBRACKET exprs RBRACKET
Rule 39    array -> LBRACKET RBRACKET
Rule 40    condition -> condition OR join
Rule 41    condition -> join
Rule 42    join -> join AND equality
Rule 43    join -> equality
Rule 44    equality -> equality EQ rel
Rule 45    equality -> equality NE rel
Rule 46    equality -> rel
Rule 47    rel -> expr LT expr
Rule 48    rel -> expr LE expr
Rule 49    rel -> expr GT expr
Rule 50    rel -> expr GE expr
Rule 51    rel -> expr
Rule 52    if -> IF LPAREN condition RPAREN LBRACE statements RBRACE
Rule 53    if -> IF LPAREN condition RPAREN LBRACE statements RBRACE else
Rule 54    else -> ELIF LPAREN condition RPAREN LBRACE statements RBRACE
Rule 55    else -> ELIF LPAREN condition RPAREN LBRACE statements RBRACE else
Rule 56    else -> ELSE LBRACE statements RBRACE
Rule 57    while -> WHILE LPAREN condition RPAREN LBRACE statements RBRACE
Rule 58    for -> FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
Rule 59    break -> BREAK
Rule 60    function -> DEF ID LPAREN args RPAREN LBRACE statements RBRACE
Rule 61    function -> DEF ID LPAREN RPAREN LBRACE statements RBRACE
Rule 62    args -> args COMMA ID
Rule 63    args -> ID
Rule 64    call -> ID LPAREN exprs RPAREN
Rule 65    call -> ID LPAREN RPAREN
Rule 66    return -> RETURN
Rule 67    return -> RETURN exprs

Terminals, with rules where they appear

AND                  : 42
ASSIGN               : 13
BREAK                : 59
COMMA                : 33 62
DEF                  : 60 61
DIVIDE               : 25
DMINUS               : 17
DPLUS                : 16
EDIVIDE              : 26
ELIF                 : 54 55
ELSE                 : 56
EQ                   : 44
FOR                  : 58
GE                   : 50
GT                   : 49
ID                   : 19 60 61 62 63 64 65
IF                   : 52 53
LBRACE               : 52 53 54 55 56 57 58 60 61
LBRACKET             : 18 38 39
LE                   : 48
LEN                  : 35
LPAREN               : 32 35 36 37 52 53 54 55 57 58 60 61 64 65
LT                   : 47
MINEQUAL             : 14
MINUS                : 21
NE                   : 45
NUMBER               : 29
OR                   : 40
PLUS                 : 20
PLUSEQUAL            : 15
PRINT                : 36 37
RBRACE               : 52 53 54 55 56 57 58 60 61
RBRACKET             : 18 38 39
RETURN               : 66 67
RPAREN               : 32 35 36 37 52 53 54 55 57 58 60 61 64 65
SEMICOLON            : 58 58
TIMES                : 24
WHILE                : 57
error                : 

Nonterminals, with rules where they appear

args                 : 60 62
array                : 23
assignment           : 4 58 58
break                : 10
call                 : 31
condition            : 40 52 53 54 55 57 58
else                 : 53 55
equality             : 42 43 44 45
expr                 : 5 13 14 15 18 20 21 32 33 34 47 47 48 48 49 49 50 50 51
exprs                : 33 36 38 64 67
factor               : 24 25 26 27
for                  : 9
function             : 11
if                   : 7
join                 : 40 41 42
len                  : 30
print                : 6
program              : 0
rel                  : 44 45 46
return               : 12
statement            : 2 3
statements           : 1 2 52 53 54 55 56 57 58 60 61
term                 : 20 21 22 24 25 26
variable             : 13 14 15 16 17 18 28 35
while                : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment
    (5) statement -> . expr
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . while
    (9) statement -> . for
    (10) statement -> . break
    (11) statement -> . function
    (12) statement -> . return
    (13) assignment -> . variable ASSIGN expr
    (14) assignment -> . variable MINEQUAL expr
    (15) assignment -> . variable PLUSEQUAL expr
    (16) assignment -> . variable DPLUS
    (17) assignment -> . variable DMINUS
    (20) expr -> . expr PLUS term
    (21) expr -> . expr MINUS term
    (22) expr -> . term
    (23) expr -> . array
    (36) print -> . PRINT LPAREN exprs RPAREN
    (37) print -> . PRINT LPAREN RPAREN
    (52) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE
    (53) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else
    (57) while -> . WHILE LPAREN condition RPAREN LBRACE statements RBRACE
    (58) for -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (59) break -> . BREAK
    (60) function -> . DEF ID LPAREN args RPAREN LBRACE statements RBRACE
    (61) function -> . DEF ID LPAREN RPAREN LBRACE statements RBRACE
    (66) return -> . RETURN
    (67) return -> . RETURN exprs
    (18) variable -> . variable LBRACKET expr RBRACKET
    (19) variable -> . ID
    (24) term -> . term TIMES factor
    (25) term -> . term DIVIDE factor
    (26) term -> . term EDIVIDE factor
    (27) term -> . factor
    (38) array -> . LBRACKET exprs RBRACKET
    (39) array -> . LBRACKET RBRACKET
    (28) factor -> . variable
    (29) factor -> . NUMBER
    (30) factor -> . len
    (31) factor -> . call
    (32) factor -> . LPAREN expr RPAREN
    (35) len -> . LEN LPAREN variable RPAREN
    (64) call -> . ID LPAREN exprs RPAREN
    (65) call -> . ID LPAREN RPAREN

    PRINT           shift and go to state 16
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    BREAK           shift and go to state 21
    DEF             shift and go to state 22
    RETURN          shift and go to state 24
    ID              shift and go to state 23
    LBRACKET        shift and go to state 25
    NUMBER          shift and go to state 27
    LPAREN          shift and go to state 17
    LEN             shift and go to state 30

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    expr                           shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    break                          shift and go to state 10
    function                       shift and go to state 11
    return                         shift and go to state 12
    variable                       shift and go to state 13
    term                           shift and go to state 14
    array                          shift and go to state 15
    factor                         shift and go to state 26
    len                            shift and go to state 28
    call                           shift and go to state 29

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment
    (5) statement -> . expr
    (6) statement -> . print
    (7) statement -> . if
    (8) statement -> . while
    (9) statement -> . for
    (10) statement -> . break
    (11) statement -> . function
    (12) statement -> . return
    (13) assignment -> . variable ASSIGN expr
    (14) assignment -> . variable MINEQUAL expr
    (15) assignment -> . variable PLUSEQUAL expr
    (16) assignment -> . variable DPLUS
    (17) assignment -> . variable DMINUS
    (20) expr -> . expr PLUS term
    (21) expr -> . expr MINUS term
    (22) expr -> . term
    (23) expr -> . array
    (36) print -> . PRINT LPAREN exprs RPAREN
    (37) print -> . PRINT LPAREN RPAREN
    (52) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE
    (53) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else
    (57) while -> . WHILE LPAREN condition RPAREN LBRACE statements RBRACE
    (58) for -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON assignment RPAREN LBRACE statements RBRACE
    (59) break -> . BREAK
    (60) function -> . DEF ID LPAREN args RPAREN LBRACE statements RBRACE
    (61) function -> . DEF ID LPAREN RPAREN LBRACE statements RBRACE
    (66) return -> . RETURN
    (67) return -> . RETURN exprs
    (18) variable -> . variable LBRACKET expr RBRACKET
    (19) variable -> . ID
    (24) term -> . term TIMES factor
    (25) term -> . term DIVIDE factor
    (26) term -> . term EDIVIDE factor
    (27) term -> . factor
    (38) array -> . LBRACKET exprs RBRACKET
    (39) array -> . LBRACKET RBRACKET
    (28) factor -> . variable
    (29) factor -> . NUMBER
    (30) factor -> . len
    (31) factor -> . call
    (32) factor -> . LPAREN expr RPAREN
    (35) len -> . LEN LPAREN variable RPAREN
    (64) call -> . ID LPAREN exprs RPAREN
    (65) call -> . ID LPAREN RPAREN

    $end            reduce using rule 1 (program -> statements .)
    PRINT           shift and go to state 16
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    BREAK           shift and go to state 21
    DEF             shift and go to state 22
    RETURN          shift and go to state 24
    ID              shift and go to state 23
    LBRACKET        shift and go to state 25
    NUMBER          shift and go to state 27
    LPAREN          shift and go to state 17
    LEN             shift and go to state 30

    statement                      shift and go to state 31
    assignment                     shift and go to state 4
    expr                           shift and go to state 5
    print                          shift and go to state 6
    if                             shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    break                          shift and go to state 10
    function                       shift and go to state 11
    return                         shift and go to state 12
    variable                       shift and go to state 13
    term                           shift and go to state 14
    array                          shift and go to state 15
    factor                         shift and go to state 26
    len                            shift and go to state 28
    call                           shift and go to state 29

state 3

    (3) statements -> statement .

    PRINT           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    DEF             reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    LBRACKET        reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    LEN             reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment .

    PRINT           reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    DEF             reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    ID              reduce using rule 4 (statement -> assignment .)
    LBRACKET        reduce using rule 4 (statement -> assignment .)
    NUMBER          reduce using rule 4 (statement -> assignment .)
    LPAREN          reduce using rule 4 (statement -> assignment .)
    LEN             reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> expr .
    (20) expr -> expr . PLUS term
    (21) expr -> expr . MINUS term

    PRINT           reduce using rule 5 (statement -> expr .)
    IF              reduce using rule 5 (statement -> expr .)
    WHILE           reduce using rule 5 (statement -> expr .)
    FOR             reduce using rule 5 (statement -> expr .)
    BREAK           reduce using rule 5 (statement -> expr .)
    DEF             reduce using rule 5 (statement -> expr .)
    RETURN          reduce using rule 5 (statement -> expr .)
    ID              reduce using rule 5 (statement -> expr .)
    LBRACKET        reduce using rule 5 (statement -> expr .)
    NUMBER          reduce using rule 5 (statement -> expr .)
    LPAREN          reduce using rule 5 (statement -> expr .)
    LEN             reduce using rule 5 (statement -> expr .)
    $end            reduce using rule 5 (statement -> expr .)
    RBRACE          reduce using rule 5 (statement -> expr .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33


state 6

    (6) statement -> print .

    PRINT           reduce using rule 6 (statement -> print .)
    IF              reduce using rule 6 (statement -> print .)
    WHILE           reduce using rule 6 (statement -> print .)
    FOR             reduce using rule 6 (statement -> print .)
    BREAK           reduce using rule 6 (statement -> print .)
    DEF             reduce using rule 6 (statement -> print .)
    RETURN          reduce using rule 6 (statement -> print .)
    ID              reduce using rule 6 (statement -> print .)
    LBRACKET        reduce using rule 6 (statement -> print .)
    NUMBER          reduce using rule 6 (statement -> print .)
    LPAREN          reduce using rule 6 (statement -> print .)
    LEN             reduce using rule 6 (statement -> print .)
    $end            reduce using rule 6 (statement -> print .)
    RBRACE          reduce using rule 6 (statement -> print .)


state 7

    (7) statement -> if .

    PRINT           reduce using rule 7 (statement -> if .)
    IF              reduce using rule 7 (statement -> if .)
    WHILE           reduce using rule 7 (statement -> if .)
    FOR             reduce using rule 7 (statement -> if .)
    BREAK           reduce using rule 7 (statement -> if .)
    DEF             reduce using rule 7 (statement -> if .)
    RETURN          reduce using rule 7 (statement -> if .)
    ID              reduce using rule 7 (statement -> if .)
    LBRACKET        reduce using rule 7 (statement -> if .)
    NUMBER          reduce using rule 7 (statement -> if .)
    LPAREN          reduce using rule 7 (statement -> if .)
    LEN             reduce using rule 7 (statement -> if .)
    $end            reduce using rule 7 (statement -> if .)
    RBRACE          reduce using rule 7 (statement -> if .)


state 8

    (8) statement -> while .

    PRINT           reduce using rule 8 (statement -> while .)
    IF              reduce using rule 8 (statement -> while .)
    WHILE           reduce using rule 8 (statement -> while .)
    FOR             reduce using rule 8 (statement -> while .)
    BREAK           reduce using rule 8 (statement -> while .)
    DEF             reduce using rule 8 (statement -> while .)
    RETURN          reduce using rule 8 (statement -> while .)
    ID              reduce using rule 8 (statement -> while .)
    LBRACKET        reduce using rule 8 (statement -> while .)
    NUMBER          reduce using rule 8 (statement -> while .)
    LPAREN          reduce using rule 8 (statement -> while .)
    LEN             reduce using rule 8 (statement -> while .)
    $end            reduce using rule 8 (statement -> while .)
    RBRACE          reduce using rule 8 (statement -> while .)


state 9

    (9) statement -> for .

    PRINT           reduce using rule 9 (statement -> for .)
    IF              reduce using rule 9 (statement -> for .)
    WHILE           reduce using rule 9 (statement -> for .)
    FOR             reduce using rule 9 (statement -> for .)
    BREAK           reduce using rule 9 (statement -> for .)
    DEF             reduce using rule 9 (statement -> for .)
    RETURN          reduce using rule 9 (statement -> for .)
    ID              reduce using rule 9 (statement -> for .)
    LBRACKET        reduce using rule 9 (statement -> for .)
    NUMBER          reduce using rule 9 (statement -> for .)
    LPAREN          reduce using rule 9 (statement -> for .)
    LEN             reduce using rule 9 (statement -> for .)
    $end            reduce using rule 9 (statement -> for .)
    RBRACE          reduce using rule 9 (statement -> for .)


state 10

    (10) statement -> break .

    PRINT           reduce using rule 10 (statement -> break .)
    IF              reduce using rule 10 (statement -> break .)
    WHILE           reduce using rule 10 (statement -> break .)
    FOR             reduce using rule 10 (statement -> break .)
    BREAK           reduce using rule 10 (statement -> break .)
    DEF             reduce using rule 10 (statement -> break .)
    RETURN          reduce using rule 10 (statement -> break .)
    ID              reduce using rule 10 (statement -> break .)
    LBRACKET        reduce using rule 10 (statement -> break .)
    NUMBER          reduce using rule 10 (statement -> break .)
    LPAREN          reduce using rule 10 (statement -> break .)
    LEN             reduce using rule 10 (statement -> break .)
    $end            reduce using rule 10 (statement -> break .)
    RBRACE          reduce using rule 10 (statement -> break .)


state 11

    (11) statement -> function .

    PRINT           reduce using rule 11 (statement -> function .)
    IF              reduce using rule 11 (statement -> function .)
    WHILE           reduce using rule 11 (statement -> function .)
    FOR             reduce using rule 11 (statement -> function .)
    BREAK           reduce using rule 11 (statement -> function .)
    DEF             reduce using rule 11 (statement -> function .)
    RETURN          reduce using rule 11 (statement -> function .)
    ID              reduce using rule 11 (statement -> function .)
    LBRACKET        reduce using rule 11 (statement -> function .)
    NUMBER          reduce using rule 11 (statement -> function .)
    LPAREN          reduce using rule 11 (statement -> function .)
    LEN             reduce using rule 11 (statement -> function .)
    $end            reduce using rule 11 (statement -> function .)
    RBRACE          reduce using rule 11 (statement -> function .)


state 12

    (12) statement -> return .

    PRINT           reduce using rule 12 (statement -> return .)
    IF              reduce using rule 12 (statement -> return .)
    WHILE           reduce using rule 12 (statement -> return .)
    FOR             reduce using rule 12 (statement -> return .)
    BREAK           reduce using rule 12 (statement -> return .)
    DEF             reduce using rule 12 (statement -> return .)
    RETURN          reduce using rule 12 (statement -> return .)
    ID              reduce using rule 12 (statement -> return .)
    LBRACKET        reduce using rule 12 (statement -> return .)
    NUMBER          reduce using rule 12 (statement -> return .)
    LPAREN          reduce using rule 12 (statement -> return .)
    LEN             reduce using rule 12 (statement -> return .)
    $end            reduce using rule 12 (statement -> return .)
    RBRACE          reduce using rule 12 (statement -> return .)


state 13

    (13) assignment -> variable . ASSIGN expr
    (14) assignment -> variable . MINEQUAL expr
    (15) assignment -> variable . PLUSEQUAL expr
    (16) assignment -> variable . DPLUS
    (17) assignment -> variable . DMINUS
    (18) variable -> variable . LBRACKET expr RBRACKET
    (28) factor -> variable .

  ! shift/reduce conflict for LBRACKET resolved as shift
    ASSIGN          shift and go to state 34
    MINEQUAL        shift and go to state 35
    PLUSEQUAL       shift and go to state 36
    DPLUS           shift and go to state 37
    DMINUS          shift and go to state 38
    LBRACKET        shift and go to state 39
    TIMES           reduce using rule 28 (factor -> variable .)
    DIVIDE          reduce using rule 28 (factor -> variable .)
    EDIVIDE         reduce using rule 28 (factor -> variable .)
    PLUS            reduce using rule 28 (factor -> variable .)
    MINUS           reduce using rule 28 (factor -> variable .)
    PRINT           reduce using rule 28 (factor -> variable .)
    IF              reduce using rule 28 (factor -> variable .)
    WHILE           reduce using rule 28 (factor -> variable .)
    FOR             reduce using rule 28 (factor -> variable .)
    BREAK           reduce using rule 28 (factor -> variable .)
    DEF             reduce using rule 28 (factor -> variable .)
    RETURN          reduce using rule 28 (factor -> variable .)
    ID              reduce using rule 28 (factor -> variable .)
    NUMBER          reduce using rule 28 (factor -> variable .)
    LPAREN          reduce using rule 28 (factor -> variable .)
    LEN             reduce using rule 28 (factor -> variable .)
    $end            reduce using rule 28 (factor -> variable .)
    RBRACE          reduce using rule 28 (factor -> variable .)

  ! LBRACKET        [ reduce using rule 28 (factor -> variable .) ]


state 14

    (22) expr -> term .
    (24) term -> term . TIMES factor
    (25) term -> term . DIVIDE factor
    (26) term -> term . EDIVIDE factor
